--- a/p6/index.html
+++ b/p6/index.html
@@ -2,19 +2,185 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>On-Time Arrivals, 2003-2014</title>
+    <title>Prosper Loan volume by State</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+    <script src="datamaps.usa.min.js"></script>
   </head>
 <body>
   <div class="container">
-    <div class="row">
-      ma che cazzo
-      <section id="content" class="col-md-12"></section>
+    <div class="row" align="center">
+      Most loan volume by US state
+      <div id="container" style="border:1px dotted blue; width: 700px; height: 475px; position: relative;"></div>
     </div>
   </div>
+  <script type="text/javascript">
+    //borrowed from http://stackoverflow.com/questions/10599933/convert-long-number-into-abbreviated-string-in-javascript-with-a-special-shortn
+    function abbreviateNumber(value) {
+        var newValue = value;
+        if (value >= 1000) {
+            var suffixes = ["", "k", "m", "b","t"];
+            var suffixNum = Math.floor( (""+value).length/3 );
+            var shortValue = '';
+            for (var precision = 2; precision >= 1; precision--) {
+                shortValue = parseFloat((
+                        suffixNum != 0 ? (value / Math.pow(1000,suffixNum)):value
+                    ).toPrecision(precision));
+                var dotLessShortValue = (shortValue + '').replace(/[^a-zA-Z 0-9]+/g,'');
+                if (dotLessShortValue.length <= 2) { break; }
+            }
+            if (shortValue % 1 != 0)  shortNum = shortValue.toFixed(1);
+            newValue = shortValue+suffixes[suffixNum];
+        }
+        return newValue;
+    }
+
+    //adds a single item of data to a state's aggregate
+    function parseItem(aggregate,state,item)
+    {
+        if(!isNaN(item.Amount))
+        {
+            if (!('nAmount' in aggregate[state]))
+            {
+                aggregate[state]['nAmount'] = 0;
+                aggregate[state]['Amount'] = 0;
+            }
+            aggregate[state]['nAmount'] += 1;
+            aggregate[state]['Amount'] += item.Amount;
+        }
+        if(!isNaN(item.APR))
+        {
+            if (!('nAPR' in aggregate[state]))
+            {
+                aggregate[state]['nAPR'] = 0;
+                aggregate[state]['APR'] = 0;
+            }
+            aggregate[state]['nAPR'] += 1;
+            aggregate[state]['APR'] += item.APR;
+        }
+        if(!isNaN(item.Score))
+        {
+            if (!('nScore' in aggregate[state]))
+            {
+                aggregate[state]['nScore'] = 0;
+                aggregate[state]['Score'] = 0;
+            }
+            aggregate[state]['nScore'] += 1;
+            aggregate[state]['Score'] += item.Score;
+        }
+        if(!isNaN(item.Ratio))
+        {
+            if (!('nRatio' in aggregate[state]))
+            {
+                aggregate[state]['nRatio'] = 0;
+                aggregate[state]['Ratio'] = 0;
+            }
+            aggregate[state]['nRatio'] += 1;
+            aggregate[state]['Ratio'] += item.Ratio;
+        }
+    }
+    var data = "short.csv";
+    var csv = d3.csv(data, function(d)
+        {
+            return {
+                'State': d.BorrowerState,
+                'Score': parseFloat(d.ProsperScore),
+                'Ratio': parseFloat(d.DebtToIncomeRatio),
+                'APR': parseFloat(d.BorrowerAPR),
+                'Amount': parseFloat(d.LoanOriginalAmount)
+            }
+        },
+
+        function(csv)
+        {
+            var dataset = {};
+            var aggregate = {}
+
+            //aggregate all the data by state
+            csv.forEach(function(item){
+                var state = item.State
+                if (!(state in aggregate))
+                {
+                    aggregate[state] = { 
+                        'Amount': 0
+                    }
+                }
+                parseItem(aggregate,state,item);
+            });
+
+            //create a colour scale
+            var onlyValues = [];
+            for (var state in aggregate) {
+                onlyValues.push(aggregate[state]['Amount']);
+            }
+            var minValue = Math.min.apply(null, onlyValues),
+                    maxValue = Math.max.apply(null, onlyValues);
+            console.log(aggregate);
+            var paletteScale = d3.scale.linear()
+                    .domain([minValue,maxValue])
+                    .range(["#EFEFFF","#02386F"]);
+
+            //create the final map dataset
+            for (var state in aggregate)
+            {
+                var value = aggregate[state]['Amount'];
+                dataset[state] = {
+                    numberOfThings: value,
+                    meanBorrowed: aggregate[state]['Amount'] /
+                        aggregate[state]['nAmount'],
+                    meanAPR: aggregate[state]['APR'] * 100 /
+                        aggregate[state]['nAPR'],
+                    meanScore: aggregate[state]['Score'] / 
+                        aggregate[state]['nScore'],
+                    meanRatio: aggregate[state]['Ratio'] * 100 / 
+                        aggregate[state]['nRatio'],
+                    fillColor: paletteScale(value)
+                }
+            }
+
+            // render map
+            var map = new Datamap({
+                element: document.getElementById('container'),
+                scope: 'usa',
+                fills: { defaultFill: '#F5F5F5' },
+                data: dataset,
+                geographyConfig: {
+                    borderColor: '#DEDEDE',
+                    highlightBorderWidth: 2,
+                    // don't change color on mouse hover
+                    highlightFillColor: function(geo) {
+                        return geo['fillColor'] || '#F5F5F5';
+                    },
+                    // only change border
+                    highlightBorderColor: '#B7B7B7',
+                    // show desired information in tooltip
+                    popupTemplate: function(geo, data) {
+                        if (!data) { return ; }
+                        // tooltip content
+                        return ['<div class="hoverinfo">',
+                            '<strong>', geo.properties.name, '</strong>',
+                            '<br>Total Borrowing: <strong>',
+                            abbreviateNumber(data.numberOfThings), '$</strong>',
+                            '<br>Mean Borrowing: <strong>',
+                            data.meanBorrowed.toFixed(2), '$</strong>',
+                            '<br>Mean APR: <strong>',
+                            data.meanAPR.toFixed(2), '%</strong>',
+                            '<br>Mean Credit Score: <strong>',
+                            data.meanScore.toFixed(2), '</strong>',
+                            '<br>Mean Debt/Earnings: <strong>',
+                            data.meanRatio.toFixed(2), '%</strong>',
+                            '</div>'].join('');
+                    }
+                }
+            });
+            map.labels()
+        }
+    );
+
+
+  </script>
 </body>
 </html>
