--- a/p6/index.html
+++ b/p6/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Prosper Loan volume by State</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
     <script src="datamaps.usa.min.js"></script>
   </head>
@@ -14,7 +11,7 @@
   <div class="container">
     <div class="row" align="center">
       Most loan volume by US state
-      <div id="container" style="border:1px dotted blue; width: 700px; height: 475px; position: relative;"></div>
+      <div id="container" style="border:0px; width: 700px; height: 475px; position: relative;"></div>
     </div>
   </div>
   <script type="text/javascript">
@@ -150,13 +147,10 @@
                 geographyConfig: {
                     borderColor: '#DEDEDE',
                     highlightBorderWidth: 2,
-                    // don't change color on mouse hover
                     highlightFillColor: function(geo) {
                         return geo['fillColor'] || '#F5F5F5';
                     },
-                    // only change border
                     highlightBorderColor: '#B7B7B7',
-                    // show desired information in tooltip
                     popupTemplate: function(geo, data) {
                         if (!data) { return ; }
                         // tooltip content
