--- a/p6/index.html
+++ b/p6/index.html
@@ -79,7 +79,7 @@
             aggregate[state]['Ratio'] += item.Ratio;
         }
     }
-    var data = "short.csv";
+    var data = "prosperLoanData.csv";
     var csv = d3.csv(data, function(d)
         {
             return {
